# ai_solution

./: .env.example  README.md  crewai.yaml  main.py  pyproject.toml
.github/workflows/: crewai-autoloop.yaml  crewai-full-automation.yaml  deploy-predictive-maintenance.yaml  full-automation.yaml  run-crewai.yaml  terraform-deploy.yaml
ai_solution/: example_integration.py
app/: Dockerfile  main.py
app/k8s/: deployment.yaml  service.yaml
example.github/workflows/: run-crewai.yaml
infra/: main.tf
src/: crew.py
src/ai_solution/: crew.py  main.py
src/config/: config.py  crew.py
tasks/: devagent_task.yaml  devopsagent_task.yaml  secagent_task.yaml  testagent_task.yaml
terraform/: main.tf
